# senzing-mcp-server

./: .env.example  .gitignore  AMAZON_Q_SETUP.md  CHATGPT_SETUP.md  CLAUDE.md  MAC_SETUP_INSTRUCTIONS.md  README.md  RESPONSE_FORMATTING.md  USAGE_GUIDE.md  chatgpt_mcp_config.json  chatgpt_mcp_config_mac.json  claude_desktop_config.json  how_entity.py  launch_senzing_mcp.sh  launch_senzing_mcp_ssh.sh  pyproject.toml  quick_test.py  requirements.txt  senzing_env.sh  test.csv  test.md  test_client.py  test_search_full.py
examples/: README.md  get_entity.py  get_entity_by_record.py  quick_test.py  search_entity.py  senzing_test.py
src/senzing_mcp/: __init__.py  sdk_wrapper.py  server.py
tests/: test_auto_reinit.py
