[project]
name = "senzing-mcp-server"
version = "0.1.0"
description = "MCP server for Senzing SDK entity resolution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
senzing-mcp = "senzing_mcp.server:run"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
